# gtfsmerge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/gtfsmerge/: __init__.py  __main__.py  cli.py  io.py  merge.py  models.py  stops.py
tests/: conftest.py  test_cli.py  test_merge.py  test_stops.py
